<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Admin_Dashboard">

    <fragment
        android:id="@+id/nav_Admin_Dashboard"
        android:name="inclinic.com.uiD.admin_dashboard.Admin_Dashboard_Fragment"
        android:label="@string/Admin_Dashboard"
        tools:layout="@layout/fragment_admin_dashboard" />

    <fragment
        android:id="@+id/nav_Admin_Diagnosis"
        android:name="inclinic.com.uiD.admin_diagnosis.Admin_Diagnosis_Fragment"
        android:label="@string/Admin_Diagnosis"
        tools:layout="@layout/fragment_admin_diagnosis" />

    <fragment
        android:id="@+id/nav_Admin_MedicalAnalysis"
        android:name="inclinic.com.uiD.admin_medical_analysis.Admin_Medical_Analysis_Fragment"
        android:label="@string/Admin_MedicalAnalysis"
        tools:layout="@layout/fragment_admin_medical_analysis" />
    <fragment
        android:id="@+id/nav_Admin_CaseAnalysis"
        android:name="inclinic.com.uiD.admin_case_analysis.Admin_Case_Analysis_Fragment"
        android:label="@string/case_analysis"
        tools:layout="@layout/fragment_admin_case_analysis" />
    <fragment
        android:id="@+id/nav_Admin_Check"
        android:name="inclinic.com.Admin.AdminActivity"
        android:label="Check Access"
        tools:layout="@layout/activity_admin" />



</navigation>