<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorAccent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="30dp">


        <ImageView
            android:id="@+id/Questionaire"
            android:layout_width="204dp"
            android:layout_height="159dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/symptoms" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age:"
            android:textColor="@color/login_form_details"
            android:textSize="20dp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/groupage"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/_0_12"
                android:theme="@style/RadiobuttnStyle"
                android:textColor="@color/login_form_details"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/_13_18"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/_19_32"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/_33_50"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/_50"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Gender:"
            android:textColor="@color/login_form_details"
            android:textSize="20dp"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/groupGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButtonmale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/male"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />

            <RadioButton
                android:id="@+id/radioButtonfemale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/female"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Did it happen to you in the past ?"
            android:textColor="@color/login_form_details"
            android:textSize="20dp"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/grouphistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButtonYes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/yes"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />

            <RadioButton
                android:id="@+id/radioButtonNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/no"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />
        </RadioGroup>

        <EditText
            android:id="@+id/times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/et_bg"
            android:hint="How may times ?"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            android:visibility="visible"
            android:inputType="numberPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="is your disease inherited ?"
            android:textColor="@color/login_form_details"
            android:textSize="20dp"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/groupInh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButtonYes1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/yes"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />

            <RadioButton
                android:id="@+id/radioButtonNo1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/no"
                android:textColor="@color/login_form_details"
                android:textSize="24sp"
                android:theme="@style/RadiobuttnStyle"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Country you have been diagnosed in:"
            android:textColor="@color/login_form_details"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnercountry"
            style="@style/spinnerItemStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:dropDownWidth="wrap_content"
            android:layout_marginTop="20dp"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/expect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/et_bg"
            android:hint="Expected reason for diagnoses ?ُ"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            />

        <Button
            android:id="@+id/btnfinish"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/et_bg"
            android:padding="16dp"
            android:text="Finish"
            android:textColor="@color/login_form_details_medium" />

        <Button
            android:id="@+id/btncase"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/et_bg"
            android:padding="16dp"
            android:text="Show cases"
            android:textColor="@color/login_form_details_medium" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/dots2" />
    </LinearLayout>
</ScrollView>
</RelativeLayout>